<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/rejestracja"
            android:textAlignment="center"
            android:textSize="25sp"
            style="@style/TextAppearance.MaterialComponents.Headline6"/>

        <EditText
            app:boxBackgroundMode="outline"
            android:id="@+id/input_adres"
            android:layout_width="200dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/adres" />

        <EditText
            app:boxBackgroundMode="outline"
            android:id="@+id/input_firstName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/imi" />

        <EditText
            app:boxBackgroundMode="outline"
            android:id="@+id/input_lastName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/nazwisko" />

        <EditText
            app:boxBackgroundMode="outline"
            android:id="@+id/input_lgin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/login" />


        <EditText
            app:boxBackgroundMode="outline"
            android:id="@+id/input_psswd"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/Hasło"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Register_btn"
            android:layout_width="140dp"
            android:layout_marginTop="20dp"
            android:layout_height="0dp"
            android:text="@string/za_konto"
            app:backgroundTint="@android:color/holo_green_dark"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

</ScrollView>