<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/top_loan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wypozycz_hulajnoge"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            style="@style/TextAppearance.MaterialComponents.Headline6"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/holo_blue_dark"/>

        <ImageView
            android:id="@+id/Scooter"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_height="260dp"
            app:srcCompat="@drawable/ic_baseline_book" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/holo_blue_dark"/>

        <TextView
            android:id="@+id/tekst_informacje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:text="@string/informacje_o_ksi_ce"/>

        <TextView
            android:id="@+id/bookinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Loan_btn"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="0dp"
            android:text="@string/wypozycz"
            app:backgroundTint="@android:color/holo_blue_dark"
            android:layout_weight="1"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Leave_btn"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="0dp"
            android:text="@string/zwroc"
            app:backgroundTint="@android:color/holo_blue_dark"
            android:layout_weight="1"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Return_btn"
            android:layout_width="150dp"
            android:layout_marginTop="5dp"
            android:layout_height="0dp"
            android:text="@string/powrót"
            app:backgroundTint="@android:color/holo_red_light"
            android:layout_weight="1"/>

    </LinearLayout>

</ScrollView>