<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/witaj_w_aplikacji_qrbook"
            android:textAlignment="center"
            android:textSize="25sp"
            style="@style/TextAppearance.MaterialComponents.Headline6"/>

        <EditText
            app:boxBackgroundMode="outline"
            android:id="@+id/input_login"
            android:layout_width="200dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Login" />

        <EditText
            android:id="@+id/input_psd"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="Hasło"/>

        <Button
            android:id="@+id/Sign_btn"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:background="@android:color/transparent"
            android:text="@string/zarejestruj_si"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:textColor="#000000" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Login_btn"
            android:layout_width="130dp"
            android:layout_marginTop="20dp"
            android:layout_height="0dp"
            android:text="@string/zaloguj"
            app:backgroundTint="@android:color/holo_green_dark"
            android:layout_weight="1"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"/>

    </LinearLayout>

</ScrollView>